--- a/src/index.css
+++ b/src/index.css
@@ -4,3 +4,11 @@ body {
   font-family: sans-serif;
   background-color: #222;
 }
+#editor-textarea {
+  width: 100%;
+  height: 100%;
+  resize: none;
+  padding: 10px 10px;
+  font: 17px/20px "Fira Code", serif;
+  background-color: #e3e3e3;
+}
