--- a/src/App.css
+++ b/src/App.css
@@ -60,22 +60,36 @@
  }
 
  .wrapper {
-   width: 600px;
+   width: 1000px;
    margin: 0 auto;
+   border: 1px solid #ECA72C
  }
 .editor-textarea {
   width: 100%;
   height: 100%;
   padding: 5px 5px 10px 7px;
   font: 16px/22px 'Fira code', monospace;
+  outline: none;
+  border: none;
+  -webkit-box-shadow: none;
+  -moz-box-shadow: none;
+  box-shadow: none;
   background-color: #e3e3e3;
 }
 .view {
   width: 100%;
   height: 100%;
-  padding: 5px 5px 5px 7px;
+  padding: 10px 5px 10px 7px;
   background-color: #e3e3e3;
   overflow: scroll;
   font-family: 'EB Garamond', Garamond, Georgia,serif;
 }
+code {
+  width: 70px;
+  overflow: scroll;
+  padding: 10px 70px;
+  background-color: #191b38;
+  color: #e3e3e3;
+  border-left: 5px solid #ECA72C;
 
+}
